--- a/figma practic/Figma.html
+++ b/figma practic/Figma.html
@@ -37,6 +37,62 @@
             </div>
         </div>
     </section>
+    <div class="header ">
+        <h1 class="latest-episode-title ">Latest episodes</h1>
+        <button class="view-all-button ">View all episodes</button>
+    </div>
+    <div class="podcast-episode ">
+        <img src="audio.svg " alt="Audio Gear " class="episode-image ">
+        <div class="episode-details ">
+          <span class="category ">Gear</span>
+          <h2 class="episode-title ">Episode 3</h2>
+          <h1 class="episode-heading ">Should you get <br>outboard audio gear?</h1>
+          <p class="episode-description ">Is hardware really worth it when it comes to podcasting? The answer is...it depends. Here's our reasons on why you might want to consider picking something up.</p>
+          <button class="view-details-button ">View Episode Details</button>
+        </div>
+      </div>
+      <div class="podcast-episode ">
+        <img src="mic.svg " alt="Microphone " class="episode-image ">
+        <div class="episode-details ">
+          <span class="category2 ">Tips & Tricks</span>
+          <h2 class="episode-title ">Episode 2</h2>
+          <h1 class="episode-heading ">Mic tricks to take <br> you to the next level<h1>
+          <p class="episode-description ">Stop rolling with those default settings on your mic. These small tweaks will take you from sounding good to great.</p>
+          <button class="view-details-button ">View Episode Details</button>
+        </div>
+      </div>
+      <div class="podcast-episode ">
+        <img src="cahs.svg " alt="Audio Gear " class="episode-image ">
+        <div class="episode-details ">
+          <span class="category ">Gear</span>
+          <h2 class="episode-title ">Episode 1</h2>
+          <h1 class="episode-heading ">The best microphone <br> under $200</h1>
+          <p class="episode-description ">With so many microphones on the market, how are you supposed to know what’s the best? Take a look at our top picks.</p>
+          <button class="view-details-button ">View Episode Details</button>
+        </div>
+      </div>
+
+      <div class="interface ">
+        <div class="content2 ">
+            <div class="button-container ">
+                <div class="button2 "></div>
+            </div>
+            <p class="subtitle ">Meet your host</p>
+            <h1 class="name ">Jacob Paulaner</h1>
+            <p class="description ">
+                Jacob has a background in audio engineering, and has been podcasting since the early days.
+            </p>
+            <p class="additional-info ">
+                He's here to help you level up your game by sharing everything he’s learned along the way.
+            </p>
+        </div>
+        <div class="image-container ">
+            <img src="hero2.svg " alt="Jacob Paulaner " class="profile-image ">
+        </div>
+    </div>
+    
+
+
 </body>
 
 </html>
