--- a/media/media.html
+++ b/media/media.html
@@ -36,6 +36,77 @@
             <button class="product-button">Продукция</button>
         </div>
     </section>
+
+
+
+
+    <div class="filters">
+        <h3 class="filters-title">Репродукции</h3>
+        <div class="filter-buttons">
+            <button>Франция</button>
+            <button>Германия</button>
+            <button>Англия</button>
+        </div>
+    </div>
+    <div class="book-row">
+        <div class="book">
+            <img src="book1.svg" alt="Книга 1">
+            <div class="author">Марсель Руссо</div>
+            <div class="title">Охота Амура</div>
+            <div class="description">Холст, масло (50x80)</div>
+            <div class="price">14 500 руб</div>
+            <button class="add-to-cart">В корзину</button>
+        </div>
+        <div class="book">
+            <img src="book2.svg" alt="Книга 2">
+            <div class="author">Анри Селин</div>
+            <div class="title">Дама с Собачкой</div>
+            <div class="description">Акварель, бумага (50x80)</div>
+            <div class="price">16 500 руб</div>
+            <button class="add-to-cart">В корзину</button>
+        </div>
+        <div class="book">
+            <img src="book3.svg" alt="Книга 3">
+            <div class="author">Франсуа Дюпон</div>
+            <div class="title">Процедура</div>
+            <div class="description">Цветная литография(40x60)</div>
+            <div class="price">20 000 руб</div>
+            <button class="add-to-cart">В корзину</button>
+        </div>
+        <div class="book">
+            <img src="book4.svg" alt="Книга 4">
+            <div class="author">Луй Детуш</div>
+            <div class="title">Роза</div>
+            <div class="description">Бумага,Аквиль (50x80)</div>
+            <div class="price">12 000 руб</div>
+            <button class="add-to-cart">В корзину</button>
+        </div>
+        <div class="book">
+            <img src="book5.svg" alt="Книга 5">
+            <div class="author">Франсуа Дюпон</div>
+            <div class="title">Птичья Трапеза</div>
+            <div class="description">Цветная литография(40x60)</div>
+            <div class="price">22 500 руб</div>
+            <button class="add-to-cart">В корзину</button>
+        </div>
+        <div class="book">
+            <img src="book6.svg" alt="Книга 6">
+            <div class="author">Пьер Моранж</div>
+            <div class="title">Пейзаж с Рыбой</div>
+            <div class="description">Цвтеная литография(40x60)</div>
+            <div class="price">20 000 руб</div>
+            <button class="add-to-cart">В корзину</button>
+        </div>
+    </div>
+
+    <div class="banner">
+        <div class="banner-content">
+            <img src="banner.svg" alt="Баннер" class="banner-image">
+        </div>
+    </div>
+
+
+
 </body>
 
 </html>
