--- a/media/media.html
+++ b/media/media.html
@@ -162,8 +162,69 @@
     </div>
 
     <div class="team">
-        <img src="Frame 256.svg">
+        <div class="team-frame">
+            <img src="frame2.png" alt="Рука">
+        </div>
+        <div class="team-content">
+            <div class="team-title">Наша команда</div>
+            <div class="team-description">
+                Значимость этих проблем настолько очевидна, что базовый вектор развития позволяет оценить значение экспериментов, поражающих по своей масштабности и грандиозности. Мы вынуждены отталкиваться от того, что консультация с широким активом
+            </div>
+            <div class="team-icons">
+                <img src="team.png" alt="Член команды 1">
+                <img src="team2.jpg" alt="Член команды 2">
+                <img src="team3.jpg" alt="Член команды 3">
+            </div>
+        </div>
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-left">
+                <div class="logo">
+                    <img src="logo.svg" alt="Ink. House Logo">
+                    <span>Ink. House</span>
+                </div>
+                <div class="contact">
+                    <p>+7 (999) 543-54-54</p>
+                    <p>Мастерская</p>
+                </div>
+            </div>
+            <div class="footer-links">
+                <div class="column">
+                    <h3>Репродукции</h3>
+                    <ul>
+                        <li>Франция</li>
+                        <li>Германия</li>
+                        <li>Англия</li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3>Новинки</h3>
+                    <ul>
+                        <li>2021</li>
+                        <li>2020</li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3>О нас</h3>
+                    <ul>
+                        <li>Художники</li>
+                        <li>Менеджеры</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-right">
+                <div class="social-media">
+                    <a href="#"><img src="Facebook.svg" alt="Facebook"></a>
+                    <a href="#"><img src="Instagram.svg" alt="Instagram"></a>
+                    <a href="#"><img src="Youtube.svg" alt="YouTube"></a>
+                </div>
+                <p>Ink. House ® All rights reserved</p>
+            </div>
+        </div>
+    </footer>
+
+    <!--Js-->
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             filterBooks('france');
